--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,7 +6,7 @@
 #    By: pviegas <pviegas@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/01 12:00:51 by pviegas           #+#    #+#              #
-#    Updated: 2023/11/09 16:42:19 by pviegas          ###   ########.fr        #
+#    Updated: 2023/11/13 14:02:17 by pviegas          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,6 +39,7 @@ SRC_FILES			= 	executor.c \
 						aux/lst_utils2.c \
 						aux/utils.c \
 						built_in/pwd.c \
+						built_in/cd.c \
 						built_in/echo.c \
 						built_in/env.c \
 						built_in/exit.c \
